# Onyx_CPP

./: .gitignore  CMakeLists.txt  main.cpp
include/: Board.h  CLIBot.h  CancellationToken.h  Evaluator.h  Fen.h  MagicBitboards.h  Move.h  MoveGenerator.h  MoveList.h  Options.h  PerftRunner.h  Piece.h  Referee.h  SearchController.h  SearchThread.h  SearchWorker.h  Searcher.h  TimeControl.h  Timer.h  TranspositionTable.h  UciParser.h  UciTokeniser.h  Zobrist.h  types.h  utils.h
src/: Board.cpp  CLIBot.cpp  Evaluator.cpp  MagicBitboards.cpp  MoveGenerator.cpp  MoveList.cpp  PerftRunner.cpp  Piece.cpp  Referee.cpp  SearchController.cpp  SearchThread.cpp  SearchWorker.cpp  Searcher.cpp  TranspositionTable.cpp  UciParser.cpp  UciTokeniser.cpp  Zobrist.cpp
tests/: CMakeLists.txt  CoreTests.cpp  EngineStressTests.cpp  EvaluatorTests.cpp  MagicBitboardTests.cpp  MoveGenTests.cpp  Perft.cpp  RefereeTests.cpp  ZobristTests.cpp
